envoy/backup/ratelimit-policy.yaml
apiVersion: gateway.envoyproxy.io/v1alpha1
kind: BackendTrafficPolicy
metadata:
  name: backend-ratelimit
spec:
  targetRefs:
  - group: gateway.networking.k8s.io
    kind: HTTPRoute
    name: backend
  rateLimit:
    type: Local
    local:
      rules:
      - clientSelectors:
          - sourceIP: {}
        limit:
          requests: 3
          unit: Minute
